refactor: A32NX BatDisplay to fbw-common / add A380 separate BAT instrument (#8495)
* Moved A32NX BatTDisplay to fbw-common and added a separate instrument to the A380. Added LVAR for selected displayed battery.

* Knob position/Lvar mapping to BAT number changed so that lvar/model can go from 0..4

* Fix tsconfig

* Made BAT number 0 show 00.0V instead of empty

* Fixed XML bug

* Changed font size and position

* Move template to separate file

* Simplifying behavior XML for BAT Selector - no intermediate template

* Moved component section to a better fitting place

* Some xml cleanup

* Changed var name and added documentation of var

* Minor cleanup of A380_COCKPIT.xml

* Cleanup of panel.xml as not required

* fixed wrong comment marker in panel.cfg

* Added localized tooltips for the battery voltage indicator knob

* Sorted [LocalVars.0] alphabetically for better comparison and locating of certain vars.

* Added BAT Voltage Indicator knob default to flt files (OFF)

* Added input events to the BAT Selector knob

* locPak fixes

* Review fixes

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -1,7 +1,7 @@
 ; Copyright (c) 2023-2024 FlyByWire Simulations
 ; SPDX-License-Identifier: GPL-3.0
 
-// Panel Configuration File
+; Panel Configuration File
 
 [Default View]
 X=0
@@ -21,15 +21,15 @@ texture=$SCREEN_DU_MFD
 
 htmlgauge00=A380X/MFD/mfd.html?duID=2, 0,0,1536,1024
 
-# To enable both MFD screens without fms-v2 rpc sync, we map one texture across both screens,
-# and render both MFD screens within one texture/instrument
+; To enable both MFD screens without fms-v2 rpc sync, we map one texture across both screens,
+; and render both MFD screens within one texture/instrument
 
 [VCockpit02]
 size_mm=768,1024
 pixel_size=768,1024
 texture=$SCREEN_DU_MFDR
 
-# No separate MFDR, see above
+; No separate MFDR, see above
 
 [VCockpit03]
 size_mm=768,1024
@@ -73,7 +73,6 @@ texture=$SCREEN_DU_NDR
 
 htmlgauge00=A380X/ND/nd.html?Index=2?duID=4, 0,0,768,1024
 
-
 [VCockpit09]
 size_mm=5120,5120
 pixel_size=5120,5120
@@ -114,7 +113,7 @@ size_mm=256,128
 pixel_size=256,128
 texture=$BAT
 
-htmlgauge00=A32NX/BAT/bat.html, 0,0,256,128
+htmlgauge00=A380X/BAT/bat.html, 0,0,256,128
 
 [VCockpit15]
 size_mm=1430,1000
