feat: init implementation

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -37,11 +37,12 @@ activate_mach_limit_based_on_cg = 0 ; Activate mach limitation depending on CG p
 activate_cg_limit_based_on_mach = 0 ; Activate cg limitation depending on mach value (true if > 0 /false othewise). Mostly for Concorde).
 max_number_of_stations = 19 ; Number of payload stations - per pax 185 lbs
 ; PAX
-; MAIN DECK FWD: 88 seats (Max = 16296.5 LBS)
-station_load.0 = 8148.3, 75.7, 0, 7.1, MAIN DECK FWD A, 3; 44 PAX
-station_load.1 = 8148.3, 75.7, 0, 7.1, MAIN DECK FWD B, 3; 44 PAX
-; MAIN DECK MID 1: 135 seats (Max = 25000.4 LBS)
-station_load.2 = 7777.9, 30.6, 0, 7.1, MAIN DECK MID 1A, 3; 42 PAX
+; TOTAL: 484 seats
+; MAIN DECK FWD: 56 seats (Max = 10370.6 LBS)
+station_load.0 = 5185.3, 75.7, 0, 7.1, MAIN DECK FWD A, 3; 28 PAX
+station_load.1 = 5185.3, 75.7, 0, 7.1, MAIN DECK FWD B, 3; 28 PAX
+; MAIN DECK MID 1: 132 seats (Max = 24434.9 LBS)
+station_load.2 = 7222.4, 30.6, 0, 7.1, MAIN DECK MID 1A, 3; 39 PAX
 station_load.3 = 9259.4, 30.6, 0, 7.1, MAIN DECK MID 1B, 3; 50 PAX
 station_load.4 = 7963.1, 30.6, 0, 7.1, MAIN DECK MID 1C, 3; 43 PAX
 ; MAIN DECK MID 2: 124 seats (Max = 22963.3 LBS)
