--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -83,14 +83,14 @@ htmlgauge00=LegacyA380X/FCU/A380_FCU.html, 0,0,5120,5120
 [VCockpit10]
 size_mm=512,512
 pixel_size=512,512
-texture=$ATTITUDEDISPLAY
+texture=$ISIS1
 
 htmlgauge00=A32NX/ISIS/isis.html, 0,0,512,512
 
 [VCockpit11]
 size_mm=512,512
 pixel_size=512,512
-texture=NO_TEXTURE
+texture=$ISIS2
 
 htmlgauge00=A380X/SND/snd.html, 0,0,512,512
 
