--- a/fbw-a380x/src/wasm/CMakeLists.txt
+++ b/fbw-a380x/src/wasm/CMakeLists.txt
@@ -5,6 +5,8 @@ set(OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../out/flybywire-aircraft-a3
 add_definitions(-DA380X)
 
 add_subdirectory(extra-backend-a380x)
+add_subdirectory(fadec_a380x)
+
 
 # FIXME: remove the if-clause as soon as all components are using CMake
 if (WIN32)
