--- a/fbw-a380x/src/wasm/fadec_a380x/CMakeLists.txt
+++ b/fbw-a380x/src/wasm/fadec_a380x/CMakeLists.txt
@@ -16,14 +16,14 @@ include_directories(
 set(SOURCE_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Gauge_Fadec_v2.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Fadec/Fadec_A380X.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Fadec/EngineControl_A380X.cpp
     ${FBW_COMMON}/fadec_common_v2/src/Fadec.cpp
-    ../../../../fbw-common/src/wasm/fadec_common_v2/src/EngineControl.cpp
 )
 
 set(INCLUDE_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Fadec/Fadec_A380X.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Fadec/EngineControl_A380X.h
     ${FBW_COMMON}/fadec_common_v2/src/Fadec.h
-    ../../../../fbw-common/src/wasm/fadec_common_v2/src/EngineControl.h
 )
 
 # create the targets
