Adding Polynomials_A380X.hpp

--- a/fbw-a380x/src/wasm/fadec_a380x/CMakeLists.txt
+++ b/fbw-a380x/src/wasm/fadec_a380x/CMakeLists.txt
@@ -24,7 +24,8 @@ set(INCLUDE_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Fadec/EngineControl_A380X.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Fadec/Fadec_A380X.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Fadec/SimDataStructs.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Fadec/ThrustLimits_A380X.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Fadec/ThrustLimits_A380X.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Fadec/Polynomials_A380X.hpp
     ${FBW_COMMON}/fadec_common_v2/src/Fadec.h
 )
 
