--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -151,16 +151,16 @@ background_color=0,0,0
 
 htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=systems.wasm&wasm_gauge=systems, 0,0,1,1
 htmlgauge01=WasmInstrument/WasmInstrument.html?wasm_module=fbw.wasm&wasm_gauge=fbw, 0,0,1,1
-htmlgauge02 = WasmInstrument/WasmInstrument.html?wasm_module=fadec-a380x.wasm&wasm_gauge=Gauge_Fadec,0,0,1,1
+htmlgauge02=WasmInstrument/WasmInstrument.html?wasm_module=fadec-a380x.wasm&wasm_gauge=Gauge_Fadec,0,0,1,1
 htmlgauge03=WasmInstrument/WasmInstrument.html?wasm_module=extra-backend-a380x.wasm&wasm_gauge=Gauge_Extra_Backend,0,0,1,1
 
 [VCockpit20]
-size_mm = 0,0
-pixel_size = 0,0
-texture = NO_TEXTURE
-background_color = 0,0,0
+size_mm=0,0
+pixel_size=0,0
+texture=NO_TEXTURE
+background_color=0,0,0
 
-htmlgauge00 = A380X/SystemsHost/systems-host.html,0,0,1,1
+htmlgauge00=A380X/SystemsHost/systems-host.html,0,0,1,1
 
 [VCockpit21]
 size_mm=0,0
