--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/aircraft.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/aircraft.cfg
@@ -17,7 +17,9 @@ icao_manufacturer = "AIRBUS"
 icao_model = "A-380-800"
 icao_engine_type = Jet
 icao_engine_count = 4
-icao_WTC = H
+; the A380-800 is the only WTC J aircraft but MSFS does not support J as far as we know
+; @see https://skybrary.aero/articles/icao-wake-turbulence-category
+icao_WTC = H 
 icao_generic = 0
 
 [PILOT]
