--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/cameras.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/cameras.cfg
@@ -8,6 +8,10 @@ minor =0
 [VIEWS]
 eyepoint = 44.2, -1.72, 4.15 ; (feet) longitudinal, lateral, vertical distance from reference datum
 
+[CAMERA_RAY_NODE_COLLISION]
+; EFB auto-unfocus
+node.1 = ModelDefinition:Interior#Name:SCREEN_EFB
+
 ;===================== CAMERADEFINITION =====================
 
 [CAMERADEFINITION.0]
