--- a/fbw-a380x/src/wasm/CMakeLists.txt
+++ b/fbw-a380x/src/wasm/CMakeLists.txt
@@ -7,8 +7,8 @@ add_definitions(-DA380X)
 add_subdirectory(extra-backend-a380x)
 add_subdirectory(fadec_a380x)
 
-
-# FIXME: remove the if-clause as soon as all components are using CMake
+# these are only here to allow CMake compatible IDEs (JetBrains' Clion for example) to show systax
+# highlighting and allow code navigation
 if (WIN32)
     add_subdirectory(fadec_a380)
     add_subdirectory(fbw_a380)
