--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -151,6 +151,13 @@ background_color = 0,0,0
 
 htmlgauge00 = A32NX/ExtrasHost/extras-host.html,0,0,1,1
 
+[VCockpit20]
+size_mm=1024,768
+pixel_size=1024,768
+texture=HUD
+hud=2, 4.85, 4.2, 37.5, 30
+htmlgauge00=A32NX/HUD/HUD.html, 0,0,1024,768
+
 [VPainting01]
 size_mm = 2048,512
 texture = $RegistrationNumber
