--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -156,7 +156,7 @@ size_mm=1024,768
 pixel_size=1024,768
 texture=HUD
 hud=2, 4.85, 4.2, 37.5, 30
-htmlgauge00=A32NX/HUD/HUD.html, 0,0,1024,768
+htmlgauge00=A32NX/HUD/HUD.html?Index=1, 0,0,1024,768
 
 [VPainting01]
 size_mm = 2048,512
