Fix atc_heavy cfg for the A320

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/aircraft.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/aircraft.cfg
@@ -90,7 +90,7 @@ atc_id = "ASX320" ; tail number
 atc_id_enable = 0 ; enable tail number
 atc_airline = "" ; airline name
 atc_flight_number = "1123" ; flight number
-atc_heavy = 1 ; heavy?
+atc_heavy = 0 ;
 atc_parking_types = "GATE,RAMP,CARGO" ; "ANY" / "RAMP" / "CARGO" / "MIL_CARGO" / "MIL_COMBAT" / "GATE" / "DOCK"
 atc_parking_codes = "" ; Comma separated and may be as small as one character each
 atc_id_color = "" ; color for the tail number : i.e. "#ffff00ff"
