Additional cfg updates

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/aircraft.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/aircraft.cfg
@@ -87,7 +87,7 @@ ui_max_range = 3500 ; max distance the aircraft can fly between take-off and lan
 ui_autonomy = 7 ; max duration the aircraft can fly between take-off and landing in (Hrs)
 ui_fuel_burn_rate = 5300 ; average fuel consumption per hour (lbs/hr) - reminder: fuel density is ~6.7lbs per US gallon
 atc_id = "FBW320" ; tail number
-atc_airline = "FBWSIM" ; airline name
+atc_airline = "Fly By Wire" ; airline name
 atc_flight_number = "320" ; flight number
 atc_heavy = 0 ;
 atc_parking_types = "GATE,RAMP,CARGO" ; "ANY" / "RAMP" / "CARGO" / "MIL_CARGO" / "MIL_COMBAT" / "GATE" / "DOCK"
