--- a/fbw-common/src/systems/tsconfig.json
+++ b/fbw-common/src/systems/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "ESNext",
     "baseUrl": ".",
     "resolveJsonModule" : true,
     "typeRoots": [
