--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -49,7 +49,7 @@ jobs:
     if: github.event.pull_request.draft == false
     env:
       FBW_PRODUCTION_BUILD: 1
-      AIRCRAFT_PREFIX: a32nx
+      AIRCRAFT_PROJECT_PREFIX: a32nx
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -61,7 +61,7 @@ jobs:
           echo CLIENT_SECRET=\"${{ secrets.NAVIGRAPH_CLIENT_SECRET_A380X }}\" >> fbw-a32nx/.env
           echo CHARTFOX_SECRET=\"${{ secrets.CHARTFOX_SECRET }}\" >> fbw-a32nx/.env
           echo SENTRY_DSN=\"${{ secrets.SENTRY_DSN }}\" >> fbw-a32nx/.env
-          echo AIRCRAFT_PREFIX=\"${{ env.AIRCRAFT_PREFIX }}\" >> fbw-a32nx/.env
+          echo AIRCRAFT_PROJECT_PREFIX=\"${{ env.AIRCRAFT_PROJECT_PREFIX }}\" >> fbw-a32nx/.env
           echo LOCALAZY_READ_KEY=${{ secrets.LOCALAZY_READ_KEY }} >> .env
           echo VITE_BUILD=false >> .env
           cat fbw-a32nx/.env
