--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -12,7 +12,7 @@ jobs:
       FBW_PRODUCTION_BUILD: 1
       RELEASE_ZIP_NAME: A32NX-stable.7z
       BUILD_DIR_NAME: stable
-      AIRCRAFT_PREFIX: a32nx
+      AIRCRAFT_PROJECT_PREFIX: a32nx
     steps:
       - name: Checkout source
         uses: actions/checkout@v2
@@ -24,7 +24,7 @@ jobs:
           echo CHARTFOX_SECRET=\"${{ secrets.CHARTFOX_SECRET }}\" >> fbw-a32nx/.env
           echo SENTRY_DSN=\"${{ secrets.SENTRY_DSN }}\" >> fbw-a32nx/.env
           echo BUILD_DIR_NAME=${{ env.BUILD_DIR_NAME }} >> .env
-          echo BUILD_DIR_NAME=${{ env.AIRCRAFT_PREFIX }} >> fbw-a32nx/.env
+          echo BUILD_DIR_NAME=${{ env.AIRCRAFT_PROJECT_PREFIX }} >> fbw-a32nx/.env
           echo LOCALAZY_READ_KEY=${{ secrets.LOCALAZY_READ_KEY }} >> .env
           echo VITE_BUILD=false >> .env
       - name: Build A32NX
